<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".StudentActivity">

    <TextView
        android:id="@+id/tv_name"
        android:text="@string/name"
        android:textSize="@dimen/textsize"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:textSize="@dimen/textsize_edt"
        android:id="@+id/et_address"
        android:hint="@string/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/textsize_edt"
            android:layout_gravity="center_vertical"
            android:id="@+id/tv_birthday"
            android:hint="@string/birthday"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/img_calender"
            android:src="@drawable/ic_calendar"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:textSize="@dimen/textsize_edt"
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
   <RadioGroup
       android:id="@+id/rbtn_group"
       android:orientation="horizontal"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <RadioButton
           android:id="@+id/rbtn_male"
           android:text="@string/male"
           android:layout_weight="1"
           android:layout_width="0dp"
           android:checked="true"
           android:layout_height="wrap_content" />
       <RadioButton
           android:id="@+id/rbtn_female"
           android:text="@string/female"
           android:layout_weight="1"
           android:layout_width="0dp"
           android:layout_height="wrap_content" />
   </RadioGroup>
    <EditText
        android:textSize="@dimen/textsize_edt"
        android:id="@+id/et_class"
        android:hint="@string/class1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:textSize="@dimen/textsize_edt"
        android:id="@+id/et_course"
        android:hint="@string/course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/btn_save"
        android:layout_gravity="center_horizontal"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>